Fix button spacing on draft bounty page

--- a/src/containers/Bounty/ActionBar.module.scss
+++ b/src/containers/Bounty/ActionBar.module.scss
@@ -5,7 +5,7 @@
 }
 
 .activateButton {
-  margin-bottom: $l-spacing;
+  margin-bottom: $base-spacing;
 }
 
 .editBountyButton {
